# labs1sem

./: README.md
Array/: Array.h  QSort.h  pch.h  test.cpp  test.h
DiceApp/: CMakeLists.txt  dicechartview.cpp  dicechartview.h  dicemodel.cpp  dicemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
